Fixed quick jump (1st column) on first tab -- to image on second tab. Also Turret and Spindle labels at top of large image.

--- a/public/css/two.css
+++ b/public/css/two.css
@@ -26,12 +26,14 @@ single p {
     position: fixed;
 	top: 710px;
 }
-/*.mark {
-    border: 4px solid blue;
-}*/
+single h4 {
+    position: fixed;
+    top: 45px;
+    font-size: 70%;
+}
 single h2 {
     position: fixed;
-    top: 45px; 
+    top: 50px; 
 }
 
 .pic {
